test/errors/assert/assert_return.yasl


assert fn(a, b) { return a + b; }(1.0, 2.0) === 3
